--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <style>
+    @import url("https://use.typekit.net/gxi7nst.css");
      * {
         margin: 0;
         padding: 0;
@@ -114,17 +115,21 @@
         }
 
         h1 {
+            font-family: "sloop-script-three", sans-serif;
+            color:deeppink;
             font-size: 6em;
             font-weight: lighter;
-            text-transform: uppercase;
+            /*text-transform: uppercase;*/
             text-align: left;
             margin-bottom: 20px;
             width: 100%;
             line-height:0.9em;
         }
         h2 {
+            font-family: monospace;
+            color: deeppink;
             text-align:left;
-            text-transform: uppercase;
+            text-transform: lowercase;
             font-weight: bold;
             font-size: 1em;
             width: 100%;
@@ -239,7 +244,7 @@
 
 <body> 
     <!-- THIS SECTION IS YOUR COVER PAGE -->
-    <section style="background-image: url(jagged_simple.jpg);">
+    <section style="background-color: white;">
         <div class="parent" >
             <div class="">
                 
@@ -253,8 +258,16 @@
             <h1 style="line-height: 0.9;font-size: 4em;">INTERACTIVE MEDIA RESEARCH JOURNAL 2025</h1>
             <h2>Rachel Nguyen #1355979 | GDES30008 Class 3</h2>
             <ol>
-                <li>Vera Molnar</li>
-                <li>Lauren Lee McCarthy</li>
+                <li>My Boyfriend Came Back from the War</li>
+                <li>Mouchette.org</li>
+                <li>SOMEONE</li>
+                <li>Molly Soda</li>
+                <li>Concrete Cowgirl</li>
+                <li>Delta_t</li>
+                <li>Real Virtual Feelings</li>
+                <li>Cyberfeminism Index</li>
+                <li>My Little Piece of Privacy</li>
+                <li>Pulse Topology</li>
             </ol></p>
         </div>
         </div>
