--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             font-size:14px;
             font-feature-settings: "ss04";
             font-weight: lighter;
+            color: deeppink;
         }
 
         section {
@@ -99,7 +100,7 @@
             left: 2em;
             width:calc(100% - 4em - 1em); 
             /* adjust as needed */
-            color: black;
+            color: deeppink;
             /* adjust as needed */
             font-size: 1em;
             line-height: 1.0em;
@@ -115,7 +116,7 @@
         }
 
         h1 {
-            font-family: "sloop-script-three", sans-serif;
+            font-family: "sloop-script-one", sans-serif;
             color:deeppink;
             font-size: 6em;
             font-weight: lighter;
@@ -146,7 +147,7 @@
         }
 
         a {
-            color: #333;
+            color: pink;
             text-decoration: none;
             font-size: 0.8em;
             width:100%;
@@ -231,7 +232,7 @@
     }
     caption_url {
         font-size: 0.8em;
-        color: #333;
+        color: pink;
         background-color: white;
         text-decoration: none;
         font-size: 0.8em;
@@ -255,7 +256,7 @@
             </div>
         <div class="right" style="background: none;color:white">
             <div background-color: white;>
-            <h1 style="line-height: 0.9;font-size: 4em;">INTERACTIVE MEDIA RESEARCH JOURNAL 2025</h1>
+            <h1 style="line-height: 0.9;font-size: 4em;">Interactive Media Research Journal 2025</h1>
             <h2>Rachel Nguyen #1355979 | GDES30008 Class 3</h2>
             <ol>
                 <li>My Boyfriend Came Back from the War</li>
