--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
             font-family: monospace;
             color: deeppink;
             text-align:left;
-            text-transform: lowercase;
-            font-weight: bold;
+            text-transform: uppercase;
             font-size: 1em;
             width: 100%;
         }
@@ -147,7 +146,7 @@
         }
 
         a {
-            color: pink;
+            color: deeppink;
             text-decoration: none;
             font-size: 0.8em;
             width:100%;
@@ -232,7 +231,7 @@
     }
     caption_url {
         font-size: 0.8em;
-        color: pink;
+        color:deeppink;
         background-color: white;
         text-decoration: none;
         font-size: 0.8em;
@@ -245,34 +244,24 @@
 
 <body> 
     <!-- THIS SECTION IS YOUR COVER PAGE -->
-    <section style="background-color: white;">
-        <div class="parent" >
-            <div class="">
-                
-            <div class="caption">
-            
-                <a class="caption_url" href="https://karenanndonnachie.github.io/VCA_INTERACTIVEMEDIA/ResearchJournal/researchJournal_template.html">https://karenanndonnachie.github.io/VCA_INTERACTIVEMEDIA/ResearchJournal/researchJournal_template.html</a></div>
-            </div>
-            </div>
-        <div class="right" style="background: none;color:white">
-            <div background-color: white;>
-            <h1 style="line-height: 0.9;font-size: 4em;">Interactive Media Research Journal 2025</h1>
-            <h2>Rachel Nguyen #1355979 | GDES30008 Class 3</h2>
-            <ol>
-                <li>My Boyfriend Came Back from the War</li>
-                <li>Mouchette.org</li>
-                <li>SOMEONE</li>
-                <li>Molly Soda</li>
-                <li>Concrete Cowgirl</li>
-                <li>Delta_t</li>
-                <li>Real Virtual Feelings</li>
-                <li>Cyberfeminism Index</li>
-                <li>My Little Piece of Privacy</li>
-                <li>Pulse Topology</li>
-            </ol></p>
+    <section class="cover">
+        <div class="cover-content">
+          <h1>Interactive Media Research Journal,<br>2025</h1>
+          <h2>{Rachel Nguyen #1355979 | GDES30008 Class 3}</h2>
+          <ol>
+            <li>My Boyfriend Came Back from the War</li>
+            <li>Mouchette.org</li>
+            <li>SOMEONE</li>
+            <li>Molly Soda</li>
+            <li>Concrete Cowgirl</li>
+            <li>Delta_t</li>
+            <li>Real Virtual Feelings</li>
+            <li>Cyberfeminism Index</li>
+            <li>My Little Piece of Privacy</li>
+            <li>Pulse Topology</li>
+          </ol>
         </div>
-        </div>
-    </section>
+      </section>
     <script>
         /* THIS SCRIPT IS LOADED VIA CDN AND ESSENTIALLY READS THE .csv FILE ROW BY ROW 
         TO GET THE VARIOUS `COMPONENTS` OF YOUR `JOURNAL` ONE `ENTRY` PER SECTION */
