--- a/index.html
+++ b/index.html
@@ -22,15 +22,50 @@
         src: url('HelveticaNowDisplay.otf');
         font-feature-settings: "ss04";
         unicode-range: U+0052,U+0052 ;}
-    .cover {
-        page: cover;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-       background-image: url('https://source.unsplash.com/random/1600x900') no-repeat center center; 
-        background-repeat: no-repeat;
-        background-size: cover;
-        }
+        .cover {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  padding: 4em;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.cover-content {
+  max-width: 900px;
+  width: 100%;
+  color: deeppink;
+}
+
+.cover h1 {
+  font-family: "sloop-script-one", cursive;
+  font-size: 5em;
+  margin-bottom: 0.5em;
+}
+
+.cover h2 {
+  font-family: monospace;
+  font-size: 1em;
+  margin-bottom: 2em;
+  color: deeppink;
+}
+
+.cover ol {
+  font-family: monospace;
+  font-size: 1em;
+  list-style: decimal;
+  padding-left: 1em;
+  margin-bottom: 2em;
+  color: deeppink;
+}
+
+.cover a {
+  font-size: 0.75em;
+  color: deeppink;
+  text-decoration: none;
+}
         body {
             /* display: flex; */
             height: 100vh;
