--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
 .cover h2 {
   font-family: monospace;
-  font-size: 1.25em; /* slightly bigger */
-  font-weight: bold;
-  margin-bottom: 2.5em;
+  font-size: 1.5em; /* larger */
+  font-weight: normal; /* fix bold */
+  margin-bottom: 2em;
 }
 
 .cover ol {
@@ -167,7 +167,7 @@
             color: deeppink;
             text-align:left;
             text-transform: uppercase;
-            font-size: 1em;
+            font-size: 2em;
             width: 100%;
         }
         h2::before{
@@ -282,7 +282,7 @@
     <!-- THIS SECTION IS YOUR COVER PAGE -->
     <section class="cover">
         <div class="cover-content">
-          <h1>Interactive Media Research Journal,<br>2025</h1>
+          <h1>Interactive Media Research Journal, 2025</h1>
           <h2>{Rachel Nguyen #1355979 | GDES30008 Class 3}</h2>
           <ol>
             <li>My Boyfriend Came Back from the War</li>
