--- a/index.html
+++ b/index.html
@@ -41,20 +41,22 @@
 
 .cover h1 {
   font-family: "sloop-script-one", cursive;
-  font-size: 6.5em; /* larger */
-  margin-bottom: 0.5em;
+  font-size: 6.5em;
+  font-weight: lighter;
   line-height: 1em;
+  margin-bottom: 1em;
+  text-align: center;
 }
 
 .cover h2 {
   font-family: monospace;
   font-size: 1.5em; /* larger */
-  font-weight: normal; /* fix bold */
+  font-weight: bold; /* fix bold */
   margin-bottom: 2em;
 }
 
 .cover ol {
-  font-family: monospace;
+  font-family: helv, helvAlt, Arial, sans-serif;
   font-size: 1.1em; /* slightly larger */
   list-style: decimal;
   padding-left: 1.5em;
@@ -283,7 +285,7 @@
     <section class="cover">
         <div class="cover-content">
           <h1>Interactive Media Research Journal, 2025</h1>
-          <h2>{Rachel Nguyen #1355979 | GDES30008 Class 3}</h2>
+          <h2>Rachel Nguyen #1355979 | GDES30008 Class 3</h2>
           <ol>
             <li>My Boyfriend Came Back from the War</li>
             <li>Mouchette.org</li>
